# filer

./: .gitignore  AI.md  TODO.md  pyproject.toml
.github/workflow/: ci.yml
filer/: analyse.py  cli.py  db.py  dedup.py  dir.py  root.py  tests.py  utils.py
filer/commands/: analyse.py  check.py  dir.py  ls.py  new.py  root.py  tree.py
gpt-chat/: 000001.md  000002.md  000003.md  README.GPT.md  initial-spec.md
tests/: test_analyse.py  test_check.py  test_dedup.py  test_dir.py  test_new.py  test_root.py  test_tree.py
