[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "filer"
version = "0.1.0"
description = "File inventory and deduplication tool with SQLite backend"
authors = [
{ name = "Gustavo Schoenaker", email = "ranaurdev@ranaur.net" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"


[project.scripts]
filer = "filer.cli:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
